# ganji-mtaani-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/architecture/: architecture-decisions.md  data-flow.md  folder-guide.md  project-overview.md  scraper-ui-design.md
docs/operations/: local-setup.md  working-rules.md
docs/roadmap/: daily-2-hour-plan.md  production-timeline.md
scripts/: fetch_and_parse_forebet.py  fetch_and_parse_forebet_basketball.py  fetch_and_parse_sportpesa.py  fetch_polymarket_gamma.py  fetch_thesportsdb_results.py  inspect_betika_basketball_parser.py  inspect_betika_football_parser.py  inspect_betika_live_dom.py  inspect_forebet_basketball_parser.py  inspect_forebet_football_parser.py  inspect_forebet_snapshot.py  inspect_mozzart_basketball_parser.py  inspect_mozzart_football_parser.py  inspect_mozzart_live_dom.py  inspect_sportpesa_basketball_parser.py  inspect_sportpesa_basketball_snapshot.py  inspect_sportpesa_football_parser.py  inspect_sportpesa_live_dom.py  inspect_sportpesa_snapshot.py  setup_playwright.ps1  smoke_fetch.py
src/ganji_mtaani_agent/: __init__.py
src/ganji_mtaani_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ganji_mtaani_agent/db/: schema_phase1.sql
src/ganji_mtaani_agent/models/: betika.py  forebet.py  mozzart.py  polymarket.py  polymarket_fetch.py  sportpesa.py  thesportsdb.py
src/ganji_mtaani_agent/parsers/: betika.py  forebet.py  mozzart.py  polymarket.py  sportpesa.py  thesportsdb.py
src/ganji_mtaani_agent/scrapers/: __init__.py  browser.py  sources.py  (+2 more)
